<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TOLET</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="sign_in_up">Sign In Or Sign Up?</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_item_search">Search</string>
    <string name="dashboard_item_search_hint">Search Properties Here</string>
    <string name="dashboard_item_bucks">My Moteel Cash</string>
    <string name="dashboard_referral_item">Referral URL</string>
    <string name="booking_list_my_bookings">My Reservations</string>
    <string name="dashboard_booking_item">My Reservation</string>
    <string name="dashboard_review_item">My Review</string>
    <string name="dashboard_profile_item">My Profile</string>
    <string name="dashboard_logout">Logout</string>
    <string name="dashboard_logout_msg">Logout from application</string>

</resources>