<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.properties.home.tolet.MainActivity" >

    <item
        android:id="@+id/menu_dashboard"
        android:actionLayout="@layout/dashboard_action_view"
        android:orderInCategory="100"
        android:title="@string/dashboard"
        app:showAsAction="ifRoom"/>
    
    <!--
         android:actionLayout="@layout/dashboard_action_view"
            android:icon="@drawable/ic_action_overflow"
        android:actionViewClass="com.properties.fragments.MyActionView
    -->
    
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="200"
        android:title="@string/exit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_sign_in_up"
        android:orderInCategory="300"
        android:title="@string/sign_in_up"
        app:showAsAction="never">
    </item>

</menu>