<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dashboard_search_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple"
        android:clickable="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:text="@string/dashboard_item_search"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:text="@string/dashboard_item_search_hint"
            android:textColor="#A19FAD"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#A19FAD" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dashboard_buck_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:text="@string/dashboard_item_bucks"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_dashboard_item_bucks_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:text="SAR 0.0"
            android:textColor="#A19FAD"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#A19FAD" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dashboard_referral_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:text="@string/dashboard_referral_item"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_dashboard_referral_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:text="SAR 0"
            android:textColor="#A19FAD"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#A19FAD" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dashboard_booking_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:text="@string/dashboard_booking_item"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_dashboard_booking_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:text="SAR 0"
            android:textColor="#A19FAD"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#A19FAD" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dashboard_review_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:text="@string/dashboard_review_item"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_dashboard_review_hotel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:text=""
            android:textColor="#A19FAD"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#A19FAD" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#A19FAD" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dashboard_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple"
        android:orientation="horizontal"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:text="@string/dashboard_logout"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:text="@string/dashboard_logout_msg"
            android:textColor="#A19FAD"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>